# qwencode-rs

./: .gitignore  ARCHITECTURE.md  COMMIT_GUIDELINES.md  Cargo.toml  PROGRESS.md  QWEN.md  README.md  SPEC.md
.github/workflows/: dependencies.yml  release.yml  rust-ci.yml
.qwen/commands/: code-quality.md  commit.md
examples/: basic_query.rs  mcp_server.rs
src/: lib.rs
src/mcp/: client.rs  mod.rs  server.rs  tool.rs
src/query/: builder.rs  executor.rs  handler.rs  mod.rs  session.rs
src/transport/: communication.rs  mod.rs  protocol.rs  stdin.rs  stream.rs
src/types/: config.rs  error.rs  mcp.rs  message.rs  mod.rs  permission.rs
src/utils/: helpers.rs  mod.rs  validation.rs
